--- a/imgui.ini
+++ b/imgui.ini
@@ -1,23 +1,49 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=485,175
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=848,226
+ViewportPos=2004,-199
 ViewportId=0xE927CF2F
-Size=550,680
+Size=550,673
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=221,103
-Size=491,259
+Pos=624,247
+Size=586,351
 Collapsed=0
 
 [Window][Another Window]
-Pos=60,60
-Size=198,71
+Pos=87,162
+Size=586,351
+Collapsed=0
+
+[Window][Choose an Algorithm]
+Pos=872,0
+Size=374,631
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Viewport]
+Pos=0,0
+Size=870,631
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Example: Custom rendering]
+ViewportPos=672,250
+ViewportId=0x3AC84485
+Size=623,411
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,0
+Size=1246,631
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=354,180 Size=1246,631 Split=X Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=870,720 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=374,720 Selected=0xB5A18669
 
