--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2004,-199
+ViewportPos=2019,-269
 ViewportId=0xE927CF2F
 Size=550,673
 Collapsed=0
@@ -40,6 +40,22 @@ Collapsed=0
 [Window][WindowOverViewport_11111111]
 Pos=0,0
 Size=1280,720
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=-6,71
+Size=354,104
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=-6,71
+Size=252,156
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=1079,211
+ViewportId=0x6D551092
+Size=353,1034
 Collapsed=0
 
 [Docking][Data]
