--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2019,-269
+ViewportPos=-686,123
 ViewportId=0xE927CF2F
 Size=550,673
 Collapsed=0
