--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-685,123
+ViewportPos=-687,123
 ViewportId=0xE927CF2F
 Size=550,673
 Collapsed=0
@@ -56,6 +56,17 @@ Collapsed=0
 ViewportPos=1079,211
 ViewportId=0x6D551092
 Size=353,1034
+Collapsed=0
+
+[Window][Example: Log]
+Pos=32,89
+Size=500,400
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+ViewportPos=-722,271
+ViewportId=0x8FC55800
+Size=346,358
 Collapsed=0
 
 [Docking][Data]
