--- a/imgui.ini
+++ b/imgui.ini
@@ -43,13 +43,14 @@ Size=1280,720
 Collapsed=0
 
 [Window][Dear ImGui ID Stack Tool]
-Pos=-6,71
+ViewportPos=314,251
+ViewportId=0x811A7A42
 Size=354,104
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
-Pos=-6,71
-Size=252,156
+Pos=27,103
+Size=760,578
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
@@ -69,8 +70,20 @@ ViewportId=0x8FC55800
 Size=346,358
 Collapsed=0
 
+[Window][Example: Documents]
+ViewportPos=185,128
+ViewportId=0x1FD64BEB
+Size=607,964
+Collapsed=0
+
+[Window][Example: Long text display]
+ViewportPos=-1281,171
+ViewportId=0x1E2A6821
+Size=520,600
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=320,180 Size=1280,720 Split=X Selected=0x13926F0B
+DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=185,177 Size=1280,720 Split=X Selected=0x13926F0B
   DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=925,720 CentralNode=1 Selected=0x13926F0B
   DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=353,720 Selected=0xB5A18669
 
