added log window

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-687,123
+ViewportPos=-686,125
 ViewportId=0xE927CF2F
 Size=550,673
 Collapsed=0
@@ -20,14 +20,14 @@ Size=586,351
 Collapsed=0
 
 [Window][Choose an Algorithm]
-Pos=927,0
-Size=353,720
+Pos=839,0
+Size=441,371
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Viewport]
 Pos=0,0
-Size=925,720
+Size=837,720
 Collapsed=0
 DockId=0x00000001,0
 
@@ -82,8 +82,21 @@ ViewportId=0x1E2A6821
 Size=520,600
 Collapsed=0
 
+[Window][Log]
+Pos=839,373
+Size=441,347
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][ThePopup]
+Pos=313,235
+Size=238,155
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x7C6B3D9B Window=0xA87D555D Pos=185,177 Size=1280,720 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x7C6B3D9B SizeRef=925,720 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0x7C6B3D9B SizeRef=353,720 Selected=0xB5A18669
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=320,180 Size=1280,720 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000001 Parent=0x7C6B3D9B SizeRef=837,720 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x7C6B3D9B SizeRef=441,720 Split=Y Selected=0xB5A18669
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=441,371 Selected=0xB5A18669
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=441,347 Selected=0x64F50EE5
 
